[project]
name = "stanformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "einx[torch]>=0.3.0",
    "jaxtyping>=0.3.2",
    "numpy>=2.3.2",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "regex>=2024.11.6",
    "tiktoken>=0.9.0",
    "ty>=0.0.1a16",
    "wandb>=0.21.0",
]

[tool.uv]
package = true
python-preference = "managed"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"

[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.lint]
extend-select = ["UP"]
ignore = ["F722"]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
